tests/test_files_pa3/errors/IfElseWhileScope.ic
class A {
	
	static void main(string[] args) { }
	
	void foo() {
		
		if (true)
			int y = 5;
			
		y = 3;
		
	}
	
	void bar() {
	
		if (true)
			int y = 5;
		else
			int z = 6;
			
		y = 3;
		z = 5;	
	}
	
	void met() {
		
		while (false)
			int y = 7;
			
		y = 3;
		
	}
}